@@ -22,6 +22,9 @@ import peersim.config.*;
 import peersim.core.*;
 
 /**
+* Control to run a cycle of the cycle drive simulation.
+* This does not need to be explicitly configured (although you can do it for
+* hacking purposes).
 */
 public class FullNextCycle implements Control {
 
@@ -31,14 +34,18 @@ public class FullNextCycle implements Control {
 
 
 /**
-* The type of the getPair function.
+* The type of the getPair function. This parameter is of historic interest and
+* was needed in a publication we wrote. You don't need to care about this.
+* But if you wanna know: if set to "rand", then in a cycle the simulator
+* does not simply iterate through the nodes, but instead picks a random one
+* N times, where N is the network size.
 * @config
 */
 private static final String PAR_GETPAIR = "getpair";
 
 // --------------------------------------------------------------------
 
-protected boolean getpair_rand;
+protected final boolean getpair_rand;
 
 /** Holds the protocol schedulers of this simulation */
 protected Scheduler[] protSchedules = null;
@@ -47,7 +54,9 @@ protected Scheduler[] protSchedules = null;
 // =============== initialization ======================================
 // =====================================================================
 
-
+/**
+* Reads config parameters and {@link Scheduler}s.
+*/
 public FullNextCycle(String prefix) {
 	
 	getpair_rand = Configuration.contains(prefix+"."+PAR_GETPAIR);
@@ -65,8 +74,13 @@ public FullNextCycle(String prefix) {
 // =====================================================================
 
 /** 
- * Execute all the protocols on all nodes. It sets the {@link CDState}
+ * Execute all the {@link CDProtocol}s on all nodes that are up.
+ * If the node goes down as a result of the execution of a protocol, then
+ * the rest of the protocols on that node are not exectuted and we move on
+ * to the next node.
+ * It sets the {@link CDState}
  * appropriately.
+ * @return always false
  */
 public boolean execute() {
 
